--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
+    background-color: #ffcfcf;
+    color: white;
 }
 
 .alert {
@@ -8,14 +10,14 @@ body {
     margin: 50px;
 }
 
-form {
+/* form {
     background-color: #dbd5d5;
     width: 30%;
     height: 250px;
     margin: 20px auto;
     padding: 25px;
     border-radius: 2px;
-}
+} */
 
 input {
     margin: 5px;
@@ -46,4 +48,13 @@ input {
     outline:0;
     border-bottom:1px solid #444; 
     cursor: pointer;
+}
+
+img {
+    height: 100px;
+    width: 100px;
+}
+
+li {
+    list-style: none;
 }
