--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,23 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
-    background: linear-gradient(#0d47a1, #1565c0, #1976d2, #1e88e5, #2196f3); 
-    background-repeat: no-repeat;   
+    /* background: linear-gradient(#0d47a1, #1565c0, #1976d2, #1e88e5, #2196f3); 
+    background-repeat: no-repeat;    */
+    background-color: lavender;
+    color: black;
+}
+
+.searchResults{
+    height: 100%;
+    /* background: linear-gradient(#0d47a1, #1565c0, #1976d2, #1e88e5, #2196f3); 
+    background-repeat: no-repeat;    */
+
+}
+
+* {
+    /* background: linear-gradient(#0d47a1, #1565c0, #1976d2, #1e88e5, #2196f3);  */
+    /* background-repeat: no-repeat;    */
+
 }
 
 .alert {
@@ -63,9 +78,9 @@ li {
     width: 50x;
     height: 25px;
     background-color: transparent;
-    color: white ;
+    /* color: white ; */
     font-size: small;
-    margin-left: ;
+    /* margin-left: ; */
     /* display:table; */
     /* margin:0px auto 0px auto; */
 }
@@ -78,7 +93,7 @@ li {
     transform: translate(-50%, -50%);
   }
 
-  .addBtn {
+  /* .addBtn { */
 /*    
         background-color: #4CAF50;
         border: none;
@@ -90,4 +105,21 @@ li {
         font-size: 16px;
         margin: 4px 2px;
         cursor: pointer; */
+  /* } */
+
+  .itemPrice {
+      float: right;
+  }
+
+  .itemAisle{
+      float: right;
+  }
+
+  .itemInfo {
+      float: left;
+  }
+
+  itemName {
+      display: flex;
+      justify-content: center;
   }
